@startuml
title 3.2 - Resumo dos Padroes de Design

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "State" {
  interface IGameState
  class GameStartingState
  class GamePlayingState
  class GameFinishedState
  class Game

  IGameState <|.. GameStartingState
  IGameState <|.. GamePlayingState
  IGameState <|.. GameFinishedState
  Game --> IGameState : state
}

package "Strategy" {
  interface IGameScoringStrategy
  class SuecaGameScoringStrategy
  interface IBotStrategy
  class EasyBotStrategy
  class HardBotStrategy
  class Round

  IGameScoringStrategy <|.. SuecaGameScoringStrategy
  IBotStrategy <|.. EasyBotStrategy
  IBotStrategy <|.. HardBotStrategy
  Round --> IBotStrategy : botStrategy
}

package "Command" {
  interface ICommand
  class PlayCardCommand
  class ChangeBotStrategyCommand

  ICommand <|.. PlayCardCommand
  ICommand <|.. ChangeBotStrategyCommand
}

package "Observer" {
  interface Subject
  interface Observer
  class EventBus
  class WebSocketObserver
  class EventPersistenceObserver

  Subject <|.. EventBus
  Observer <|.. WebSocketObserver
  Observer <|.. EventPersistenceObserver
  EventBus o-- Observer
}



@enduml
